.tkenvrc added; serverproc name now contains client addr

--- a/samples/dyna/omnetpp.ini
+++ b/samples/dyna/omnetpp.ini
@@ -6,7 +6,7 @@ random-seed = 1
 warnings = yes
 snapshot-file = dyna.sna
 output-vector-file = dyna.vec
-sim-time-limit = 500s
+sim-time-limit = 50000s
 cpu-time-limit= 600s
 total-stack-kb = 2048 ; 2MByte, increase if necessary
 
@@ -29,9 +29,9 @@ update-freq-express = 100
 breakpoints-enabled = yes
 
 [DisplayStrings]
-*.client[*] = "i=comp"
+*.client[*] = "i=comp;p=,,m,10"
 *.server = "i=pc"
-*.switch = "b=100,20,oval"
+*.switch = "i=switch2"
 
 [Parameters]
 dyna.client[*].conn_ia_time =  exponential( 10s )
