--- a/samples/fddi/fddi.mak.in
+++ b/samples/fddi/fddi.mak.in
@@ -99,7 +99,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\fddi.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fddi.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fddi.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
+LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fddi.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fddi.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
 	"$(INTDIR)\fddi_mac.obj" \
 	"$(INTDIR)\fddi_mac_n.obj" \
@@ -188,7 +188,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\fddi.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fddi.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fddi.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@"
+LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fddi.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fddi.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@"
 LINK32_OBJS= \
 	"$(INTDIR)\fddi_mac.obj" \
 	"$(INTDIR)\fddi_mac_n.obj" \
@@ -274,7 +274,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\fddi.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fddi.pdb" /machine:I386 /out:"$(OUTDIR)\fddi.exe" /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
+LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fddi.pdb" /machine:I386 /out:"$(OUTDIR)\fddi.exe" /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
 	"$(INTDIR)\fddi_mac.obj" \
 	"$(INTDIR)\fddi_mac_n.obj" \
@@ -360,7 +360,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\fddi.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fddi.pdb" /machine:I386 /out:"$(OUTDIR)\fddi.exe" /libpath:"@OMNETPP_LIB_DIR@"
+LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fddi.pdb" /machine:I386 /out:"$(OUTDIR)\fddi.exe" /libpath:"@OMNETPP_LIB_DIR@"
 LINK32_OBJS= \
 	"$(INTDIR)\fddi_mac.obj" \
 	"$(INTDIR)\fddi_mac_n.obj" \
