--- a/samples/hcube/hcube.mak.in
+++ b/samples/hcube/hcube.mak.in
@@ -99,7 +99,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\hcube.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\hcube.pdb" /debug /machine:I386 /out:"$(OUTDIR)\hcube.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
+LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\hcube.pdb" /debug /machine:I386 /out:"$(OUTDIR)\hcube.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
 	"$(INTDIR)\gensink.obj" \
 	"$(INTDIR)\gensink_n.obj" \
@@ -186,7 +186,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\hcube.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\hcube.pdb" /debug /machine:I386 /out:"$(OUTDIR)\hcube.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@"
+LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\hcube.pdb" /debug /machine:I386 /out:"$(OUTDIR)\hcube.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@"
 LINK32_OBJS= \
 	"$(INTDIR)\gensink.obj" \
 	"$(INTDIR)\gensink_n.obj" \
@@ -270,7 +270,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\hcube.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\hcube.pdb" /machine:I386 /out:"$(OUTDIR)\hcube.exe" /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
+LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\hcube.pdb" /machine:I386 /out:"$(OUTDIR)\hcube.exe" /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
 	"$(INTDIR)\gensink.obj" \
 	"$(INTDIR)\gensink_n.obj" \
@@ -354,7 +354,7 @@ BSC32_FLAGS=/nologo /o"$(OUTDIR)\hcube.bsc"
 BSC32_SBRS= \
 
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\hcube.pdb" /machine:I386 /out:"$(OUTDIR)\hcube.exe" /libpath:"@OMNETPP_LIB_DIR@"
+LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:65536 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\hcube.pdb" /machine:I386 /out:"$(OUTDIR)\hcube.exe" /libpath:"@OMNETPP_LIB_DIR@"
 LINK32_OBJS= \
 	"$(INTDIR)\gensink.obj" \
 	"$(INTDIR)\gensink_n.obj" \
@@ -571,11 +571,11 @@ InputPath=.\hcpacket.msg
 InputName=hcpacket
 
 ".\hcpacket_m.cpp"	".\hcpacket_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "hcube - Win32 Debug Cmdenv"
 
@@ -583,11 +583,11 @@ InputPath=.\hcpacket.msg
 InputName=hcpacket
 
 ".\hcpacket_m.cpp"	".\hcpacket_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "hcube - Win32 Release Tkenv"
 
@@ -595,11 +595,11 @@ InputPath=.\hcpacket.msg
 InputName=hcpacket
 
 ".\hcpacket_m.cpp"	".\hcpacket_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "hcube - Win32 Release Cmdenv"
 
@@ -607,13 +607,13 @@ InputPath=.\hcpacket.msg
 InputName=hcpacket
 
 ".\hcpacket_m.cpp"	".\hcpacket_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
-<< 
-	
+<<
 
-!ENDIF 
+
+!ENDIF
 
 SOURCE=.\hcpacket_m.cpp
 
