finite queue size in MAC

--- a/samples/token/omnetpp.ini
+++ b/samples/token/omnetpp.ini
@@ -32,21 +32,25 @@ extra-stack=20000 ;20K, but 10K is probably enough
 [Parameters]
 token.comp[*].gen.numMessages = 1000000
 token.comp[*].gen.messageLength = uniform(1,4500)
+token.comp[*].mac.queueMaxLen = 20
 
 [Run 1]
 # well loaded ring (if run with numStations=5)
+token.THT=0.2s
 token.comp[*].gen.interArrivalTime = truncnormal(0.023, 0.006)
 output-vector-file = token1.vec
 
 [Run 2]
 # definately overloaded ring
 token.numStations = 7
+token.THT=0.2s
 token.comp[*].gen.interArrivalTime = truncnormal(0.015, 0.003)
 output-vector-file = token2.vec
 
 [Run 3]
-# relatively low traffic
-token.numStations = 4
-token.comp[*].gen.interArrivalTime = truncnormal(0.030, 0.010)
+# a large network
+token.numStations = 100
+token.THT=0.2s
+token.comp[*].gen.interArrivalTime = truncnormal(0.40, 0.2)
 output-vector-file = token3.vec
 
