--- a/samples/topo/omnetpp.ini
+++ b/samples/topo/omnetpp.ini
@@ -1,13 +1,34 @@
-#
-# uncomment one (remove '#') from the lines below, then run the program
-#
+[Run 1]
+network=chain
+chain.n=5
 
-[General]
-#network=chain
-#network=mesh
-#network=star
+[Run 2]
+network=mesh
+mesh.height = 4
+mesh.width = 6
+
+[Run 3]
+network=star
+star.n = 15
+
+[Run 4]
 network=hexGrid
-#network=fullGraph
-#network=randomGraph
-#network=binaryTree1
-#network=binaryTree2
+hexGrid.rows = 7
+hexGrid.cols = 3
+
+[Run 5]
+network=fullGraph
+fullGraph.n = 10
+
+[Run 6]
+network=randomGraph
+randomGraph.n = 10
+
+[Run 7]
+network=binaryTree1
+binaryTree1.height=5
+
+[Run 8]
+network=binaryTree2
+binaryTree2.height=5
+
